--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@docusaurus/core": "2.3.0",
     "@docusaurus/preset-classic": "2.3.0",
     "@easyops-cn/docusaurus-search-local": "^0.33.6",
-    "@mdx-js/react": "^1.6.21",
-    "clsx": "^1.1.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@mdx-js/react": "^1.6.22",
+    "clsx": "^1.2.1",
+    "prism-react-renderer": "^1.3.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
+  "devDependencies": {
+    "@docusaurus/module-type-aliases": "2.3.0"
+  },
+
   "browserslist": {
     "production": [
       ">0.5%",
