build: set build env opt
https://github.com/facebook/docusaurus/issues/5778
https://github.com/capactio/website/commit/b5155b9fef9ad83948e46837c43b9f4e233aba01

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Build website
         run: yarn build
+        env:
+          NODE_OPTIONS: "--openssl-legacy-provider"
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
