--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,8 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+
       - name: Test build website
         run: yarn build
+        env:
+          NODE_OPTIONS: "--openssl-legacy-provider"
