--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seedboxio",
+  "name": "hostingbydesign",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -17,16 +17,19 @@
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
     "@easyops-cn/docusaurus-search-local": "^0.33.6",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@mdx-js/react": "^3.0.0",
+    "prism-react-renderer": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.3.2"
+    "@docusaurus/types": "3.0.0"
   },
-
+  "engines": {
+    // require Node.js 18.0+
+    "node": ">=18.0"
+  }
   "browserslist": {
     "production": [
       ">0.5%",
