--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "hostingbydesign",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
-  },
-  "dependencies": {
-    "@docusaurus/core": "3.3.2",
-    "@docusaurus/preset-classic": "3.3.2",
-    "@easyops-cn/docusaurus-search-local": "^0.33.6",
-    "@mdx-js/react": "^3.0.0",
-    "prism-react-renderer": "^2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.3.2",
-    "@docusaurus/types": "3.0.0"
-  },
+  {
+    "name": "seedboxio",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+      "docusaurus": "docusaurus",
+      "start": "docusaurus start",
+      "build": "docusaurus build",
+      "swizzle": "docusaurus swizzle",
+      "deploy": "docusaurus deploy",
+      "clear": "docusaurus clear",
+      "serve": "docusaurus serve",
+      "write-translations": "docusaurus write-translations",
+      "write-heading-ids": "docusaurus write-heading-ids"
+    },
+    "dependencies": {
+      "@docusaurus/core": "2.3.0",
+      "@docusaurus/preset-classic": "2.3.0",
+      "@mdx-js/react": "^1.6.21",
+      "clsx": "^1.1.1",
+      "react": "^17.0.1",
+      "react-dom": "^17.0.1"
+    },
   "engines": {
     "node": ">=18.0"
   },
