--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  {
-    "name": "seedboxio",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-      "docusaurus": "docusaurus",
-      "start": "docusaurus start",
-      "build": "docusaurus build",
-      "swizzle": "docusaurus swizzle",
-      "deploy": "docusaurus deploy",
-      "clear": "docusaurus clear",
-      "serve": "docusaurus serve",
-      "write-translations": "docusaurus write-translations",
-      "write-heading-ids": "docusaurus write-heading-ids"
-    },
-    "dependencies": {
-      "@docusaurus/core": "2.3.0",
-      "@docusaurus/preset-classic": "2.3.0",
-      "@mdx-js/react": "^1.6.21",
-      "clsx": "^1.1.1",
-      "react": "^17.0.1",
-      "react-dom": "^17.0.1"
-    },
+  "name": "seedboxio",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "docusaurus": "docusaurus",
+    "start": "docusaurus start",
+    "build": "docusaurus build",
+    "swizzle": "docusaurus swizzle",
+    "deploy": "docusaurus deploy",
+    "clear": "docusaurus clear",
+    "serve": "docusaurus serve",
+    "write-translations": "docusaurus write-translations",
+    "write-heading-ids": "docusaurus write-heading-ids"
+  },
+  "dependencies": {
+    "@docusaurus/core": "2.3.0",
+    "@docusaurus/preset-classic": "2.3.0",
+    "@easyops-cn/docusaurus-search-local": "^0.33.6",
+    "@mdx-js/react": "^1.6.21",
+    "clsx": "^1.1.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
   "engines": {
     "node": ">=18.0"
   },
